# sartor

./: .dockerignore  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  ACCESSIBILITY.md  AGENTS.md  CHANGELOG-archive.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  REUSE.toml  SECURITY.md  alembic.ini  analyzer.py  app.py  config.py  corpus_to_json_resume.py  demo_fixtures.py  docx_to_persona_html.py  generator.py  hardening.py  json_resume.py  llms.txt  parser.py  pdf_render.py  promptfooconfig.yaml  pyproject.toml  requirements.txt  scraper.py  vision.md
.claude/: launch.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/agents/: eval-judge.md  git-flow.md  prompt-archaeologist.md  tune-drafter.md  ux-onboarding-designer.md
.claude-plugin/commands/: eval.md  prompt-tune.md  replay.md  tune-from-annotations.md  wiki-audit.md  wiki-ingest.md  wiki-query.md
.claude-plugin/hooks/: block-merge-to-main.sh  block-secrets.sh  capture-before-compact.sh  check-plan-approved.sh  cleanup-plan-on-merge.sh  hooks.json  mark-plan-approved.sh  require-evidence-before-fix.sh  require-feature-branch.sh  restore-evidence.sh  route-security-lint.sh  ruff-changed.sh  validate-context.sh  wiki-freshness-reminder.sh
.githooks/: README.md  pre-commit  pre-merge-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/codeql/: codeql-config.yml
.github/workflows/: capture-smoke.yml  ci.yml  codeql.yml  docker.yml  docs-deploy.yml  publish-codeql-pack.yml  release.yml  scorecard.yml
agents/: compliance-witness.md  eval-judge.md  git-flow.md  headhunter.md  prompt-archaeologist.md  tune-drafter.md  ux-onboarding-designer.md  wiki-grounding-auditor.md  wiki-scribe.md
blueprints/: __init__.py  analysis.py  applications.py  assistant.py  diagnostics.py  generation.py  templates.py  users.py
blueprints/corpus/: __init__.py  _bp.py  _shared.py  career_assets.py  curation.py  experiences.py  proposals.py  skills.py  summaries.py  tags.py
commands/: bench.md  compliance-witness.md  eval.md  inspect-context.md  prompt-tune.md  tune-from-annotations.md  wiki-audit.md  wiki-ingest.md  wiki-lint.md  wiki-query.md  wiki-self-update.md
configs/: example.config  testuser.config
dashboard/: README.md  __init__.py  routes.py
dashboard/templates/: dashboard.html
db/: __init__.py  ats_roundtrip.py  build_context.py  models.py  persist_run.py  session.py
db/migrations/: _sqlite_check_constraint.py  env.py  script.py.mako
docs/: AGENT_HANDOFF_TEMPLATE.md  DOC_AUDIT.md  PERFORMANCE_HISTORY.md  PRODUCT_SHAPE.md  R1_BENCHMARK_2026-05-26.md  R1_PHASE2_RESULTS.md  RELEASE_ARC.md  RELEASE_CHECKLIST.md  SESSION_HANDOFF_2026-05-27.md  _mermaid_test.md  architecture.md  bundled_templates_LICENSE.md  install.md  system-model.md  template_authoring.md  walkthrough.md  walkthrough_example.md
docs-site/: README.md  next.config.mjs  package-lock.json  package.json  source.config.ts
docs-site/scripts/: generate-api-docs.mjs
docs/dev/: AGENT_FAILURE_PATTERNS.md  AGENT_HANDOFF_TEMPLATE.md  COMPOSE_REWRITE_DIAL.md  EXTRACTION.md  GROUNDING_METRIC.md  ORCHESTRATION_PLAYBOOK.md  RELEASE_ARC.md  RELEASE_CHECKLIST.md  V1_0_5_VERIFICATION.md  app-blueprints-design.md  avatar-citation-format-guidance.md  avatar-voice-tone-guidance.md  decisions.md  dependency-triage-pre-v1.1.0.md  doc-style-guide.md  docs-site-deploy.md  keep-ledger.md  (+11 more)
evals/: README.md  TUNING_LOG.md  annotation.py  bootstrap.py  callback_weights.json  grounding_signals.py  runner.py  seed_import.py  tune.py
hooks/: block-merge-to-main.sh  block-secrets.sh  check-plan-approved.sh  edit-write-dispatcher.sh  mark-plan-approved.sh  wiki-freshness-reminder.sh
onboarding/: __init__.py  corpus_import.py  experience_match.py  extract_experiences.py  import_legacy.py  review_cli.py
personas/: cover_letter.html
recall/: README.md  __init__.py  assemble.py  memory_source.py  models.py  planes.py  source.py
scripts/: backfill_application_titles.py  build_bundled_templates.py  build_vector_index.py  capture_screenshots.py  check_doc_frontmatter.py  check_doc_links.py  check_doc_single_home.py  check_handoff_pointer.py  export_corpus_seed.py  gate.py  generate_openapi_spec.py  perf_baseline.py  print_handoff_pointer.py  project_docs_to_mdx.py  release_version.py  smoke_phase_b1.py  vector_before_after_eval.py  vector_index_probe.py  verify_doc_template.py  wiki_freshness.py
skills/: README.md
static/: __init__.py  app.js  assistant.js  help-modal.js  style.css
templates/: __init__.py  index.html
tests/: __init__.py  _ast_import_roots.py  conftest.py  test_a11y_floor_guards.py  test_accept_refinement.py  test_analyze_hidden_qualities.py  test_analyze_split.py  test_analyzer.py  test_analyzer_iteration.py  test_analyzer_model_selection.py  test_annotation.py  test_annotation_routes.py  test_app_cache_headers.py  test_app_clarify.py  test_app_corpus_backed.py  test_app_iterate_clarify.py  test_app_iteration.py  test_app_security.py  test_application_routes.py  test_apply_chosen_summary.py  test_assistant_route.py  test_assistant_vector_wiring.py  test_ats_roundtrip.py  test_avatar_streaming.py  test_backfill_application_titles.py  test_bootstrap.py  test_browser_open.py  test_build_context_db.py  test_build_vector_index.py  test_bundled_templates.py  test_career_corpus_routes.py  test_clarifications_list.py  test_clarify_context_probe.py  test_cli_setup.py  test_composition_summary.py  test_config.py  test_construction_boundary.py  test_context_write_races.py  test_corpus_duplicates_route.py  test_corpus_import.py  (+90 more)
ui_pages/: __init__.py  base.py  corpus.py  dashboard_console.py  pipeline.py  prior_apps.py  selectors.py  user_picker.py  wizard_clarify.py  wizard_compose.py  wizard_generate.py  wizard_job.py  wizard_output.py  wizard_template.py
web_infra/: __init__.py  clients.py  config_io.py  http.py  openapi.py  provisioning.py  request_gates.py  security.py
(+380 files in other folders)
