[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "callback"
version = "1.0.7"
description = "Local-first résumé + cover-letter tailor for one specific job at a time. Powered by the Claude API; your data stays on your machine."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "amodal1" }]
keywords = ["resume", "resume-tailor", "cover-letter", "ats", "claude", "anthropic", "llm", "career", "job-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Framework :: Flask",
]
dependencies = [
    "flask>=3.0,<4.0",
    "anthropic>=0.40,<1.0",
    "python-docx>=1.1,<2.0",
    "pdfplumber>=0.11,<1.0",
    "markdown>=3.6,<4.0",
    "beautifulsoup4>=4.12,<5.0",
    "requests>=2.31,<3.0",
    "pydantic>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "alembic>=1.13,<2.0",
    # β.3 — Playwright drives headless Chromium for PDF output only. (The
    # in-browser live preview shares the same HTML/CSS template but renders
    # browser-side via paged.js — it does NOT use Chromium; see SECURITY.md
    # "Bundled third-party assets".) PDF output requires a one-time Chromium
    # binary download:
    #   python -m playwright install chromium
    # The browser binary is ~150MB and lives in the OS user cache
    # (%LOCALAPPDATA%\ms-playwright on Windows, ~/.cache on Linux,
    # ~/Library/Caches on macOS), NOT inside the repo.
    "playwright>=1.40,<2.0",
    # Sprint 7.6 — the S3 vector tier (semantic retrieval for the doc-grounded
    # assistant). model2vec is a STATIC-embedding model: numpy + tokenizers +
    # safetensors, NO torch / onnxruntime — the lightest semantic path. numpy is
    # also imported directly by `recall/sources/vector_source.py` for the
    # brute-force cosine + the `.npy` sidecar. The embedding model (~30MB) downloads
    # ONCE via `python -m scripts.build_vector_index` into a gitignored local
    # sidecar (db/vector_index/); runtime retrieval is fully local (no network).
    # Both are hard deps (owner decision 2026-06-16); model2vec stays out of
    # `recall/` (wired only in blueprints/ + scripts/) so the substrate stays
    # extractable + embedder-agnostic. Added ahead of the formal v1.0.8 eval gate at
    # owner direction (Stage-1 lexical retrieval tested too literal) — see CHANGELOG
    # + RELEASE_ARC §4.7.
    "numpy>=1.24,<3.0",
    "model2vec>=0.3,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-socket>=0.7,<1.0",  # PX-08 / G-2 network-egress falsifiability gate
    "ruff>=0.6,<1.0",
    "mypy>=1.10,<2.0",
    "pyyaml>=6.0,<7.0",
    "types-requests>=2.31",
]
# Offline grounding signal scorers for --grounding-signals eval runs.
# torch is NOT listed here because it requires a platform-specific wheel
# (CPU-only vs CUDA). Install torch FIRST, then this group.
# See CONTRIBUTING.md "Grounding signal scorers" for full instructions.
#
# minicheck is PINNED to a known-good commit: the upstream default branch
# drifted to a vLLM/Bespoke-7B rewrite (dropped the `device` kwarg), and an
# unpinned `git+` ref silently re-drifts (window-8.5-findings EV-1). This commit
# keeps the CPU `flan-t5-large` path and was validated end-to-end on 2026-06-23.
# accelerate is required by transformers>=5 for the `device_map="auto"` the
# minicheck Inferencer uses; the transformers cap is widened to <6.0 (validated
# on 5.10.2 — the previous <5.0 cap was already being violated by a fresh install).
eval-grounding = [
    "transformers>=4.40,<6.0",
    "accelerate>=1.0",
    "nltk>=3.9",  # MiniCheck sentence-splits with NLTK; declared directly (grounding_signals ensures punkt_tab)
    "minicheck @ git+https://github.com/Liyan06/MiniCheck.git@b58b9fa69acbd1015ec970fa65dd752413a053d2",
]

[project.urls]
Homepage = "https://github.com/amodal1/callback"
Repository = "https://github.com/amodal1/callback"
Issues = "https://github.com/amodal1/callback/issues"
Changelog = "https://github.com/amodal1/callback/blob/main/CHANGELOG.md"

[project.scripts]
# `callback` launches the Flask app on http://localhost:5000 (same as
# `python app.py`). The shim lets `pip install -e .` users run the
# tool without a clone-relative invocation.
callback = "app:main"

[tool.setuptools]
py-modules = ["app", "analyzer", "config", "hardening", "generator", "parser", "scraper"]

[tool.setuptools.packages.find]
include = ["blueprints*", "dashboard*", "db*", "onboarding*", "recall*", "web_infra*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["configs", "resumes", "output", "logs", "evals/results", "evals/fixtures/real", "db/migrations/versions"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    # Kit-adoption Phase 1 final item (KIT-6 / design §4): the SIM + RUF families
    # land whole — "add the family to select, fix the real hits, ignore the noise"
    # (Decision-6 ratchet-then-block). Whole-family select holds future code to the
    # standard too; the documented noise is carved out in `ignore` below.
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
    # Kit-adoption Phase 2, first sub-item (KIT-6/KIT-7, design §4 "Strictness ratchet"):
    # the ANN (flake8-annotations) family lands whole across production — "add the family
    # to select, fix the real hits, exempt the Decision-7 set". ANN is unambiguous, so it
    # hard-blocks day one (Decision-6 — not warn→block ratcheted), same as SIM/RUF in
    # Phase 1. The Decision-7 exempt set (tests/ evals/ scripts/ db/migrations) is carved
    # out in per-file-ignores below; production carries no ANN override (the §6 exit shape
    # for this family). ANN401 (any-type) is handled case-by-case at the call site, not by
    # a blanket family ignore.
    "ANN",  # flake8-annotations
    # Kit-adoption Phase 2 #3 (KIT-6 ratchet / KIT-7 end-state, design §4/§6): the D
    # (pydocstyle) family. CONTENT rules (D205/D209/D301/D4xx) block tree-wide day one;
    # the MISSING-DOCSTRING rules (D101/D102/D103/D105/D107) ratchet per-module via the
    # per-file-ignores ratchet block below — that list shrinks as modules are documented
    # until only the KIT-7 exempt set remains (the §6 exit criterion). The google
    # convention (below) narrows D to its subset + silences the D203/D211 + D212/D213
    # conflicts. hardening.py is the first fully-documented module → not in the ratchet.
    "D",    # pydocstyle
]
ignore = [
    "E501",  # line too long — many lines in prompts intentionally long
    "S101",  # use of assert (pytest needs this)
    "B008",  # function call in default arg (Flask convention)
    # SIM/RUF triage noise (Decision-6 "known-noisy heuristic stays ignored"):
    "RUF001",  # ambiguous-unicode in strings — em-dash/smart-quotes in prompt+UI copy, intentional
    "RUF002",  # ambiguous-unicode in docstrings — same
    "RUF003",  # ambiguous-unicode in comments — same
    "SIM905",  # split-static-string — hardening.STOP_WORDS is a deliberately compact space-delimited
               # constant; the fix explodes it into a ~110-element literal (strictly worse)
]

[tool.ruff.lint.per-file-ignores]
# RUF059 (unused unpacked variable) is an idiomatic tuple-unpack in tests
# (`app, run = make_app()` ignoring one half) — a context false-positive, on par
# with the existing S-family test carve-outs below. Production code stays covered.
# ANN (flake8-annotations) is the Decision-7 / KIT-7 strictness-exempt set — test,
# eval, and script scaffolding is not held to the production annotation bar (the
# ratchet's named end-state exempts exactly these four trees; db/migrations/versions
# is already fully extend-excluded above). Production carries no ANN override.
"tests/**" = ["S101", "S105", "S106", "S108", "S607", "RUF059", "ANN", "D"]
"evals/*" = ["S101", "ANN", "D"]
"scripts/**" = ["ANN", "D"]

# Kit-adoption Phase 2 #3 — D missing-docstring ratchet (KIT-6/§6). These production
# modules are not yet documented; each entry waives ONLY the missing-docstring codes
# (D101/D102/D103/D105/D107) so the CONTENT rules (D205/D209/...) still apply. The list
# SHRINKS as modules are documented branch-by-branch; the §6 exit criterion is reached
# when it is empty (then D blocks everywhere outside the exempt set above). `ui_pages/**`
# is the 12-file Playwright POM — 53% of the remaining debt; its eventual branch is the
# large one. hardening.py was documented in this branch → deliberately absent here.
"ui_pages/**" = ["D101", "D102", "D103", "D105", "D107"]
"analyzer.py" = ["D101", "D102", "D103", "D105", "D107"]
"db/models.py" = ["D101", "D102", "D103", "D105", "D107"]
"config.py" = ["D101", "D102", "D103", "D105", "D107"]
"onboarding/review_cli.py" = ["D101", "D102", "D103", "D105", "D107"]
"onboarding/corpus_import.py" = ["D101", "D102", "D103", "D105", "D107"]
"onboarding/extract_experiences.py" = ["D101", "D102", "D103", "D105", "D107"]
"blueprints/users.py" = ["D101", "D102", "D103", "D105", "D107"]
"blueprints/generation.py" = ["D101", "D102", "D103", "D105", "D107"]
"blueprints/corpus/curation.py" = ["D101", "D102", "D103", "D105", "D107"]

[tool.ruff.lint.pydocstyle]
# Kit-adoption Phase 2 #3: pin the google docstring convention. Narrows the D family to
# google's subset and silences the mutually-exclusive D203/D211 + D212/D213 pairs (so D
# never self-conflicts). Required whenever "D" is in select.
convention = "google"

[tool.ruff.format]
# Kit-adoption Phase 1 (KIT-6): declare the adopted formatter style explicitly so the
# `ruff format --check` gate (wired in .claude-plugin/hooks/ruff-changed.sh) is deterministic
# across machines + ruff versions. These match ruff's current defaults — they pin the style,
# they do not change formatter output. `line-ending` is left at the default ("auto", preserve
# each file's existing ending) to avoid CRLF/LF churn on Windows clones.
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
# Kit-adoption Phase 1 (KIT-3/§4): the Pydantic mypy plugin teaches mypy the
# analyzer response models' generated __init__/validator signatures. Ships inside
# the existing `pydantic` dep — no new dependency. The legacy SQLAlchemy mypy
# plugin is deliberately NOT enabled: db/models.py uses native 2.0 typing
# (DeclarativeBase + Mapped[...] + mapped_column), for which that plugin is
# deprecated/unneeded. See docs/dev/kit-adoption-design.md §4.
plugins = ["pydantic.mypy"]
strict_optional = true
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["docx", "docx.*", "pdfplumber", "pdfplumber.*", "markdown", "markdown.*", "bs4", "bs4.*"]
ignore_missing_imports = true

# Kit-adoption Phase 2 #2 (KIT-6 ratchet / KIT-7 end-state): mypy --strict +
# warn_unreachable on the deterministic, LLM-free leaf modules — the first rung of the
# per-module --strict ratchet (kit-adoption-design.md §4/§6). `strict` is NOT a per-module
# option (mypy.options.PER_MODULE_OPTIONS), so the strict preset is spelled out as its
# per-module-capable component flags. The global config stays permissive; these three block.
# Tighten module-by-module toward the Decision-7 end-state (strict everywhere except
# tests/ evals/ scripts/ db/migrations/versions).
[[tool.mypy.overrides]]
module = ["scraper", "json_resume", "pdf_render"]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
check_untyped_defs = true
warn_return_any = true
strict_equality = true
extra_checks = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: tests that launch a real headless Chromium (β.3 PDF end-to-end)",
    "ux: Playwright browser-driven UI regression tests (also marked slow; need `python -m playwright install chromium`). Run with `pytest -m ux`.",
    "a11y: axe-core accessibility smoke gate (also marked `ux` + `slow`, so it runs inside `pytest -m ux`; address it alone with `pytest -m a11y`). axe-core is vendored at `tests/ux/a11y/vendor/axe.min.js` — no pip dependency.",
    "show_welcome: UX tests that opt INTO the Sprint-6.5 first-view help auto-modal (default-suppressed for the rest of the suite by the `_help_welcome_default_seen` autouse fixture).",
    "show_tour: UX tests that opt INTO the full KW3 new-user first-run tour (the multi-stop help sequence; default-suppressed for the rest of the suite by the `_help_welcome_default_seen` autouse fixture).",
]
filterwarnings = [
    # pytest-socket emits a UserWarning each time it blocks a network primitive. The
    # egress-allowlist suite (tests/test_egress_allowlist.py) deliberately triggers the block to
    # prove the gate has teeth, so these are expected, not defects. The two observed warnings have
    # distinct messages ("...socket.socket." and "...socket.getaddrinfo."); both — plus the
    # gethostbyname / connect variants — share the prefix below, so this start-anchored message
    # filter covers them all while staying scoped (nothing else starts this way, so no unrelated
    # UserWarning is masked). (Carry-forward ledger: "pytest-socket UserWarning ×2", cleared on 8.0.)
    "ignore:A test tried to use socket.:UserWarning",
]
